# github-dorks

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  SPEC.md  _check_regex.py  pyproject.toml  requirements.txt
agents/: README.md  scan-all-repos.md  scan-repo.md
config/: config.yaml
config/patterns/csharp/: cwe-209.yaml  cwe-502.yaml  cwe-601.yaml  cwe-78.yaml  cwe-79.yaml  cwe-89.yaml  cwe-918.yaml
config/patterns/java/: cwe-22.yaml  cwe-327.yaml  cwe-502.yaml  cwe-611.yaml  cwe-78.yaml  cwe-79.yaml  cwe-89.yaml  cwe-918.yaml
config/patterns/javascript/: cwe-22.yaml  cwe-319.yaml  cwe-327.yaml  cwe-502.yaml  cwe-78.yaml  cwe-79.yaml  cwe-89.yaml  cwe-918.yaml  cwe-95.yaml
config/patterns/php/: cwe-22.yaml  cwe-327.yaml  cwe-502.yaml  cwe-611.yaml  cwe-78.yaml  cwe-79.yaml  cwe-89.yaml  cwe-918.yaml  cwe-94.yaml  cwe-98.yaml
config/patterns/python/: cwe-22.yaml  cwe-295.yaml  cwe-327.yaml  cwe-502.yaml  cwe-611.yaml  cwe-78.yaml  cwe-79.yaml  cwe-89.yaml  cwe-918.yaml  cwe-95.yaml
docs/: BASIC-DORKS.md  DESIGN.md  IMPROVED-DORKS.md
src/pipeline/: __init__.py  __main__.py  config.py  export.py  logging_config.py  pipeline.py  veracode_scan.py
src/pipeline/db/: __init__.py  connection.py  schema.sql
src/pipeline/github/: __init__.py  client.py
src/pipeline/models/: __init__.py  (+3 more)
tests/: conftest.py  test_deduplicator.py  test_finding_dao.py  test_framework_detector.py  test_pattern.py  test_pattern_content.py  test_repo_discovery.py  test_repo_filter.py  test_repo_scorer.py  test_result_enricher.py  test_result_scorer.py  test_scanner.py
(+17 files in other folders)
